Expand database support and improve MCP navigation precision
Add explicit YOLO authorization, native database workflows, optional client skill installers, type-aware and module-aware resolution, bounded navigation pages, compact call graphs, and catalog diagnostics.

Include regression coverage, adaptive navigation benchmarks, raw validation evidence, and documented limitations. Generated target artifacts are intentionally excluded.