@@ -14,7 +14,7 @@ import java.util.Map;
  * <ol>
  *   <li>import-driven exact qualified-name match — 1.0</li>
  *   <li>same file — 0.95; same directory — 0.9</li>
- *   <li>globally unique simple name (+arity compatibility) in the same language — 0.8</li>
+ *   <li>globally unique simple name (+arity compatibility) in a compatible language family — 0.8</li>
  *   <li>ambiguous: one edge per candidate (max {@value #MAX_CANDIDATES}), 0.5/k each,
  *       {@code resolution=heuristic}</li>
  *   <li>no match: retained by the caller in the pending-refs index so later file additions
@@ -28,11 +28,35 @@ public final class NameResolver {
     private NameResolver() {
     }
 
+    /** Bounded per-file coverage evidence, stored in the same published generation as its edges. */
+    public static io.doindev.codegraph.model.Node resolutionNode(FileFragment fragment,List<RawRef> pending) {
+        if(!ResolutionLanguages.compatible(fragment.lang(),"js"))return null;
+        var file=fragment.declarations().stream().filter(n->n.id().equals(fragment.file())).findFirst().orElse(null);
+        if(file==null)return null;
+        var attrs=new java.util.HashMap<>(file.attrs());
+        var reasons=new java.util.TreeMap<String,Integer>();
+        for(RawRef ref:pending)reasons.merge(ref.resolutionStatus()==null?"unresolved_name":ref.resolutionStatus(),1,Integer::sum);
+        attrs.put("moduleResolutionVersion","1");
+        attrs.put("moduleUnresolvedCount",""+pending.size());
+        reasons.forEach((reason,count)->attrs.put("moduleUnresolved."+reason,""+count));
+        return new io.doindev.codegraph.model.Node(file.id(),file.kind(),file.name(),file.displaySignature(),file.span(),file.metrics(),attrs);
+    }
+
     /** Resolve one fragment's refs; unresolved refs are appended to {@code pendingOut}. */
-    public static List<Edge> resolve(FileFragment fragment, SymbolTable table, List<RawRef> pendingOut) {
+    public static List<Edge> resolve(FileFragment fragment, SymbolLookup table, List<RawRef> pendingOut) {
         List<Edge> edges = new ArrayList<>();
+        JavaCallResolver java = fragment.lang().equals("java") ? new JavaCallResolver(fragment, table) : null;
+        EcmaModuleResolver modules = ResolutionLanguages.compatible(fragment.lang(),"js") ? new EcmaModuleResolver(fragment,table) : null;
         for (RawRef ref : fragment.rawRefs()) {
-            List<Edge> resolved = resolveOne(fragment, ref, table);
+            if(modules != null) {
+                var result=modules.resolve(ref);
+                if(result.handled()) {
+                    if(result.edges().isEmpty())pendingOut.add(ref.unresolved(result.status()));
+                    else edges.addAll(result.edges());
+                    continue;
+                }
+            }
+            List<Edge> resolved = java == null ? resolveOne(fragment, ref, table) : java.resolve(ref);
             if (resolved.isEmpty()) {
                 pendingOut.add(ref);
             } else {
@@ -42,18 +66,20 @@ public final class NameResolver {
         return edges;
     }
 
-    private static List<Edge> resolveOne(FileFragment fragment, RawRef ref, SymbolTable table) {
+    private static List<Edge> resolveOne(FileFragment fragment, RawRef ref, SymbolLookup table) {
         // rung 1: an import that ends in this name pins the qualified name exactly
-        for (String imported : fragment.imports()) {
+        for (String imported : ResolutionLanguages.compatible(fragment.lang(),"js") ? List.<String>of() : fragment.imports()) {
             if (imported.equals(ref.name()) || imported.endsWith("." + ref.name())
                     || imported.endsWith("::" + ref.name()) || imported.endsWith("/" + ref.name())) {
-                var importedCandidates=table.byQualifiedName(normalizeImport(imported)).stream()
+                var importedCandidates=table.byQualifiedName(normalizeImport(imported),fragment.lang()).stream()
+                        .filter(e->ResolutionLanguages.compatible(fragment.lang(),e.id().lang()))
                         .filter(e->kindCompatible(ref,e)&&arityCompatible(ref,e)).toList();
                 if(!importedCandidates.isEmpty())return candidates(ref,importedCandidates,1.0f,"import");
             }
         }
 
-        List<SymbolTable.Entry> candidates = table.bySimpleName(ref.name()).stream()
+        List<SymbolTable.Entry> candidates = table.bySimpleName(ref.name(),fragment.lang()).stream()
+                .filter(e -> ResolutionLanguages.compatible(fragment.lang(),e.id().lang()))
                 .filter(e -> kindCompatible(ref, e))
                 .filter(e -> arityCompatible(ref, e))
                 .toList();
@@ -75,16 +101,13 @@ public final class NameResolver {
             return candidates(ref,sameDir,0.9f,"same-dir");
         }
 
-        // rung 3: globally unique within the language
-        List<SymbolTable.Entry> sameLang = candidates.stream()
-                .filter(e -> e.id().lang().equals(fragment.lang())).toList();
-        if (sameLang.size() == 1) {
-            return List.of(edge(ref, sameLang.get(0), 0.8f, "unique-name"));
+        // rung 3: unique within the entire compatible family; JS must not hide a TS candidate.
+        if (candidates.size() == 1) {
+            return List.of(edge(ref, candidates.getFirst(), 0.8f, "unique-name"));
         }
 
         // rung 4: ambiguous — emit each candidate at reduced confidence
-        List<SymbolTable.Entry> pool = sameLang.isEmpty() ? candidates : sameLang;
-        List<SymbolTable.Entry> top = pool.stream().limit(MAX_CANDIDATES).toList();
+        List<SymbolTable.Entry> top = candidates.stream().limit(MAX_CANDIDATES).toList();
         float confidence = 0.5f / top.size();
         List<Edge> edges = new ArrayList<>(top.size());
         for (SymbolTable.Entry entry : top) {
@@ -123,7 +146,7 @@ public final class NameResolver {
         return imported.replace("::", ".").replace('/', '.');
     }
 
-    private static Edge edge(RawRef ref, SymbolTable.Entry target, float confidence, String resolution) {
+    static Edge edge(RawRef ref, SymbolTable.Entry target, float confidence, String resolution) {
         SymbolId from = ref.from() instanceof SymbolId s ? s : null;
         var attrs = new java.util.HashMap<String,String>();
         attrs.put("resolution", resolution);
